Project displays images of random dog's with gradient background

--- a/app/src/main/res/drawable/gradient_1.xml
+++ b/app/src/main/res/drawable/gradient_1.xml
@@ -3,6 +3,6 @@
 <gradient
     android:angle="225"
     android:endColor="#2196F3"
-    android:startColor="3F51B5"/>
+    android:startColor="#2E3B85"/>
 
 </shape>
