--- a/app/src/main/res/drawable/gradient_list.xml
+++ b/app/src/main/res/drawable/gradient_list.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- for the animation list of colors to show-->
+<item android:drawable="@drawable/gradient_1"
+     android:duration="4000"/>
+<item android:drawable="@drawable/gradient_2"
+     android:duration="4000"/>
+<item android:drawable="@drawable/gradient_3"
+     android:duration="4000"/>
+
 </animation-list>
